@@ -1,3 +1,11 @@
+2002-04-25  Jean-Claude Wippler <jcw@equi4.com>
+	* library/zipvfs.tcl: removed dependencies on pink, switched
+	to "zlib" command (now available in critlib and in tclkit)
+	* library/vfsUtils.tcl: fixed env to be global, added unset
+	so unmounting cleans up its list of mounted file systems
+	* library/{scripdoc.tcl,vfs.tcl}: removed, tclkit specific
+	* library/pkgIndex.tcl: drop packages "scripdoc" and "vfslib"
+
 2002-04-25  Vince Darley <vincentdarley@sourceforge.net>
 	* tests/*: revamp of tests to be more robust, and to be
 	able to run from inside a mounted virtual filesystem.
